styles.css
 body {
     margin: 0;
     overflow: hidden;
 }

 #sidebar {
     position: absolute;
     height: calc(100% - 75px);
     width: 200px;
     background-color: rgb(230, 230, 230);
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
 }

 #title {
     height: 2%;
     padding: 40px 0 20px 0;
     text-align: center;
     font-family: Arial, "宋体";
     font-size: 36;
     font-weight: bold;
     user-select: none;
     cursor: pointer;
 }

 #playlist {
     padding: 20px 0 20px 0;
     width: 100%;
     text-align: center;
     cursor: pointer;
 }

 #playlist:hover {
     background-color: rgb(220, 220, 220);
 }

 #main-body {
     position: absolute;
     height: calc(100% - 75px);
     width: calc(100% - 200px);
     top: 0%;
     left: 200px;
     background-color: rgb(247, 247, 247);
 }

 .custom-title-bar {
     /* Allows window dragging */
     -webkit-app-region: drag;
     position: absolute;
     top: 0%;
     left: 0%;
     height: 75px;
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     transform: translateY(0);
     transition: transform 1s ease;
 }

 .custom-title-bar.hidden {
     transform: translateY(-75px);
 }

 #search {
     -webkit-app-region: no-drag;
     border: 1px solid rgb(220, 220, 220);
     outline: none;
     position: absolute;
     top: 25px;
     left: 50px;
     height: 25px;
     width: 300px;
     border-radius: 5px;
 }

 .custom-title-bar button {
     background-color: rgba(0, 0, 0, 0);
     border: none;
     cursor: pointer;
     border-radius: 5px;
     width: 30px;
     height: 30px;
     background-size: cover;
     background-position: center;
 }

 .custom-title-bar button:hover {
     background-color: rgba(0, 0, 0, 0.1);
 }

 .window-controls {
     -webkit-app-region: no-drag;
     position: absolute;
     top: 25px;
     left: calc(100% - 130px);
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 5px;
 }

 .minimize {
     background-image: url('pictures/minimize.png');
 }

 .maximize {
     background-image: url('pictures/maximize.png');
 }

 .close {
     background-image: url('pictures/close.png');
 }

 #cover {
     position: absolute;
     top: 75px;
     left: 10px;
     /* calc(100%-75px) is wrong */
     height: calc(100% - 85px);
     /* Create a gap between the scrollbar and the edge of the window */
     width: calc(100% - 20px);
     border-radius: 10px;
     background-size: cover;
     background-position: center;
     background-image: url('pictures/cover.jpg');
 }

 #cover.hidden {
     visibility: hidden;
 }

 #song-list {
     position: absolute;
     top: 75px;
     /* calc(100%-75px) is wrong */
     height: calc(100% - 75px);
     /* Create a gap between the scrollbar and the edge of the window */
     width: calc(100% - 5px);
     visibility: hidden;
 }

 #song-list.display {
     visibility: visible;
 }

 #song-label {
     height: 5%;
     width: 100%;
     display: flex;
     align-items: center;
     user-select: none;
 }

 #song-title-label:hover {
     padding: 5px 0 5px 0;
     border-radius: 5px;
     cursor: pointer;
     background-color: rgb(220, 220, 220);
 }

 #artist-label:hover {
     padding: 5px 0 5px 0;
     border-radius: 5px;
     cursor: pointer;
     background-color: rgb(220, 220, 220);
 }

 #album-label:hover {
     padding: 5px 0 5px 0;
     border-radius: 5px;
     cursor: pointer;
     background-color: rgb(220, 220, 220);
 }

 #duration-label:hover {
     padding: 5px 0 5px 0;
     border-radius: 5px;
     cursor: pointer;
     background-color: rgb(220, 220, 220);
 }

 .resizer {
     position: absolute;
     top: 0%;
     left: calc(100% - 10px);
     width: 10px;
     height: 100%;
     cursor: col-resize;
 }

 .song-index {
     flex: 0 0 10%;
     display: flex;
     justify-content: center;
 }

 .song-title {
     flex: 0 0 30%;
     position: relative;
 }

 .artist {
     flex: 0 0 25%;
     position: relative;
 }

 .album {
     flex: 0 0 25%;
 }

 .duration {
     flex: 0 0 5%;
 }

 #songs {
     position: absolute;
     top: 5%;
     overflow-y: auto;
     scroll-behavior: smooth;
     left: 0%;
     height: 95%;
     width: 100%;
     user-select: none;

     &::-webkit-scrollbar {
         width: 6px;
     }

     &::-webkit-scrollbar-thumb {
         background-color: rgb(200, 200, 200);
         border-radius: 3px;
     }

     &::-webkit-scrollbar-thumb:hover {
         background-color: rgb(180, 180, 180);
     }
 }

 .song-line {
     height: 5%;
     width: 100%;
     display: flex;
     border-radius: 10px;
     align-items: center;
     cursor: pointer;
 }

 .song-line:hover {
     background-color: rgba(0, 0, 0, 0.15);
 }

 .song-line-column-text {
     font-size: 15px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }

 #music-controls {
     position: absolute;
     top: calc(100% - 75px);
     width: 100%;
     height: 75px;
     background-color: rgb(240, 240, 240);
 }

 #left-bottom {
     position: absolute;
     top: 12px;
     left: 20px;
     width: calc(30% - 30px);
     background-color: rgba(0, 0, 0, 0);
     display: flex;
 }

 #cover-art {
     position: absolute;
     top: 0;
     left: 0;
     height: 50px;
     width: 50px;
     border-radius: 5px;
     user-select: none;
 }

 #left-bottom-title {
     position: absolute;
     top: 0;
     left: 60px;
     max-width: calc(100% - 60px);
     font-size: 15px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     user-select: none;
 }

 #left-bottom-artist {
     position: absolute;
     top: 25px;
     left: 60px;
     max-width: calc(100% - 60px);
     font-size: 15px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     user-select: none;
 }
/* ... */

